@@ -61,9 +61,9 @@ namespace lsp
         "key1=str[]:value1\n"
         "key2=i32[]:123\n"
         "key3=f32[]:123.4560\n"
-        "key4=f32[d]:4.2170\n"
+        "key4=f32[d]:12.5000\n"
         "key5=i32[t]:123\n"
-        "key6=f32[qtd]:4.2170\n"
+        "key6=f32[qtd]:12.5000\n"
         "key7=f32[]:-inf\n"
         "key8=str[q]:+inf\n"
         "key9=blob[qt]:5::12345\n"
